2018-04-10 [1.42 Bld 132]

- Bugfix      : correct result of strstr() if search string is at end
                of string
- Bugfix      : correct month display on locale systems (off-by-one)
- Bugfix      : Also regard ' and " if enclosed in () or []

2018-03-29 [1.42 Bld 131]

- Bugfix      : correct date display on locale systems

2018-03-28 [1.42 Bld 130]

- Bugfix      : clean up date & time format handling for locale-based systems

2018-03-16 [1.42 Bld 129]

- Bugfix      : correct assumption of length of forward JSR/JMP on 68HC12

2018-03-11 [1.42 Bld 128]

- Bugfix      : correct distance range checking on SC/MP

2018-03-04 [1.42 Bld 127]

- Bugfix      : avoid 'target not on same page' for forward references
                on several platforms

2018-02-28 [1.42 Bld 126]

- Addition    : add AT43USB355

- Bugfix      : when writing line to .i file that contained a macro
                call and a label, only write out the label, plus an
                eventual comment.

2018-02-24 [1.42 Bld 125]

- Bugfix      : correct argument checking for CHARSET

- Bugfix      : If a line calling a macro contains a label not consumed
                by the macro, output the line (minus tha macro call)
                in the -P output

- Addition    : Optionally display column and position in source line
                for some errors
2018-01-21 [1.42 Bld 124]

- Addition    : add ATmega{8|16|32}U2,
                    ATmega{16|32}U4,
                    ATmega32U6,AT90USB646/647,AT90USB1286/1287

- Bugfix      : correct address space deduction for AVR

- Bugfix      : defining CPU aliases for AVR works again

2017-12-26 [1.42 Bld 123]

- Addition    : add ATtiny48/88/43u/441/841/828/1634/87/167/
                4/5/9/10/20/40/102/104/28/11/12/15/13A/24A/44A/
                84A, AT90S2323/2333/2343/8534

- Addition    : replace MACEXP with MACEXP_DFT/MACEXP_OVR

2017-11-27 [1.42 Bld 122]

- Bugfix      : correct double ASSR definition for ATmega8/16/32
