@@ -1,3 +1,9 @@
+2018-04-18 [1.42 Bld 133]
+
+- Change      : ALIGN uses execution instead of load address as base
+- Addition    : allow ALIGN to optionally fill padding area with
+                byte pattern
+
 2018-04-10 [1.42 Bld 132]
 
 - Bugfix      : correct result of strstr() if search string is at end
